kube/stable/tap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/rewrite-target: "/tap/$2"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://$host/tap/"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://$host/api/tap/"

    nginx.ingress.kubernetes.io/auth-url: "https://lsst-lsp-stable.ncsa.illinois.edu/auth?capability=read:tap"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      error_page 403 = @Basic401; # Basic401 configured in jwt-authorizer ingress rule
      auth_request_set $auth_token $upstream_http_x_auth_request_token;
      proxy_set_header Authorization "Bearer $auth_token";

  name: tap-ingress
spec:
  rules:
  - host: lsst-lsp-stable.ncsa.illinois.edu
    http:
      paths:
      - path: /api/tap(/|$)(.*)
        backend:
          serviceName: tap-service
          servicePort: 8080
